--- a/scores/templates/partials/navbar.html
+++ b/scores/templates/partials/navbar.html
@@ -7,7 +7,7 @@
                 <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Scores</a>
+                <a class="nav-link" href="{% url 'fixtures' %}">Scores</a>
             </li>
 
         </ul>
